@@ -1,5 +1,8 @@
 2002-02-14  Ian Lance Taylor  <ian@airs.com>
 
+	* lib/buffer.c: Add MALLOC_BUFFERS case to use malloc/free for
+	each buffer, to permit easy use of debugging malloc.
+
 	* chat.c (fcsend): Permit \M and \m in any type of chat script.
 	* uucp.texi (Chat Scripts): Document \M and \m here.
 	(dial File): Don't document \M and \m here.
